fixed overlapping h's css

--- a/style.css
+++ b/style.css
@@ -31,7 +31,7 @@
     margin-left: 20px;
 }
 
-h1{
+#name{
     margin-left: 20px;
 }
 
@@ -43,11 +43,11 @@ h1{
     margin-top: 20px;
     display: inline;
 }
-h2{
+#city{
     display: inline;
     font-size: 15px;
 }
-h3{
+#janeinfo{
     margin-top: 10px;
     margin-left: 20px;
 }
@@ -83,10 +83,49 @@ h3{
     display: flex;
 }
 
-button{
+.tbutton{
     color: white;
     background-color: deepskyblue;
     font-size: 20px;
     border: 2px solid black;
     box-shadow: 3px 3px black;
+}
+
+.connectionrequests{
+    align-items: flex-end;
+    position: static;
+    display: flex;
+}
+
+.ConReq{
+    height: 150px;
+    width: 300px;
+    background-color: white;
+    border: 2px solid grey;
+}
+#conbanner{
+    background-color: black;
+    color: white;
+    text-align: center;
+}
+#two{
+    background-color: grey;
+    border-radius: 50%;
+}
+
+#nomorefriends{
+    height: 20px;
+    width: 20px;
+    display: inline-block;
+}
+
+#dontaddthem{
+    display: inline-block;
+}
+
+.peoplepics{
+    height: 50px;
+    width: 50px;
+    display: inline-block;
+    align-items: flex-start;
 }
